package org.example.rules;

import org.example.card.Card;

public interface PlayCardRule {
    boolean check(Card card);
}
